@@ -75,11 +75,14 @@ d_ply <- function(.data, .variables, .fun = NULL, ..., .progress = "none", .prin
 #' @param .margins a vector giving the subscripts to split up \code{data} by.  1 splits up by rows, 2 by columns and c(1,2) by rows and columns, and so on for higher dimensions
 #' @param .fun function to apply to each piece
 #' @param ... other arguments passed on to \code{.fun}
+#' @param .expand if \code{.data} is a data frame, should output be 1d 
+#'   (expand = FALSE), with an element for each row; or nd (expand = TRUE),
+#'    with a dimension for each variable.
 #' @param .progress name of the progress bar to use, see \code{\link{create_progress_bar}}
 #' @param .print automatically print each result? (default: \code{FALSE})
 #' @export
-a_ply <- function(.data, .margins, .fun = NULL, ..., .progress = "none", .print = FALSE) {
-  pieces <- splitter_a(.data, .margins)
+a_ply <- function(.data, .margins, .fun = NULL, ..., .expand = TRUE, .progress = "none", .print = FALSE) {
+  pieces <- splitter_a(.data, .margins, .expand)
   
   l_ply(.data = pieces, .fun = .fun, ..., .progress = .progress, .print = .print)
 }
