@@ -1,7 +1,8 @@
 \name{maply}
 \alias{maply}
 \title{Call function with arguments in array or data frame, returning an array.}
-\usage{maply(.data, .fun, ..., .progress="none", .parallel=FALSE)}
+\usage{maply(.data, .fun, ..., .expand=TRUE, .progress="none",
+    .parallel=FALSE)}
 
 \description{
   Call function with arguments in array or data frame, returning an
@@ -26,6 +27,8 @@
   \item{.data}{matrix or data frame to use as source of arguments}
   \item{.fun}{function to be called with varying arguments}
   \item{...}{other arguments passed on to \code{.fun}}
+  \item{.expand}{should output be 1d (expand = FALSE), with an element for
+each row; or nd (expand = TRUE), with a dimension for each variable.}
   \item{.progress}{name of the progress bar to use, see \code{\link{create_progress_bar}}}
   \item{.parallel}{if \code{TRUE}, apply function in parallel, using parallel 
 backend provided by foreach}
